ros2_ws/log/build_2025-02-18_18-08-06/signal_processing/stderr.log
  File "/shared-folder/ManchesterChallenges/ros2_ws/install/signal_processing/lib/python3.10/site-packages/signal_processing/signal_generator.py", line 18
    10
    ^^
SyntaxError: invalid syntax

